fixing wrap issues

--- a/Assets/css/stylesheet.css
+++ b/Assets/css/stylesheet.css
@@ -164,8 +164,10 @@ footer {
 
 
 .First-Project {
-    width: 100%;
-    height: auto;
+    flex-basis: 100%;
+    max-width: 100%;
+    max-height: 200px;
+    height: 200px;
 }
 
 .Other-Projects {
@@ -177,8 +179,8 @@ footer {
 
 .article {
     position: absolute;
-    bottom: 8px;
-    left: 8px;
+    bottom: 10px;
+    left: 100px;
     font-size: 10px;
     background-color: turquoise;
     padding: 10px;
@@ -199,7 +201,11 @@ footer {
 @media screen and (max-width: 992px) {
     main,
     nav {
+        display: flex;
+        flex-wrap: wrap;
+        flex-basis: 100%;
         flex-direction: column;
+        /* width: 100%; */
     }
   }
 
